--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
 body {
   background-color: var(--bg-clr);
   font-family: 'Figtree', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card {
