--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ body {
 }
 
 .card {
-  margin: 4rem auto;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  margin: 6rem auto;
   padding: 1.4rem;
   width: 350px;
   background-color: var(--bg-card);
