--- a/style.css
+++ b/style.css
@@ -14,17 +14,15 @@
 body {
   background-color: var(--bg-clr);
   font-family: 'Figtree', sans-serif;
+  min-height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
-  margin: 6rem auto;
+    
+  /* margin: 4rem auto; */
   padding: 1.4rem;
   width: 350px;
   background-color: var(--bg-card);
